--- a/public/template/admin/main/template.ini
+++ b/public/template/admin/main/template.ini
@@ -1,15 +1,14 @@
-﻿title	=	"Mỹ Phẩm Huyền Milk BOUTIQUE"
+﻿title	=	"Coupon"
 
 metaHTTP[]	= "Content-Type|text/html; charset=utf-8"
 
 metaName[]	= "viewport|width=device-width, initial-scale=1, shrink-to-fit=no"
-metaName[]	= "keywords|Mỹ Phẩm Huyền Milk"
 
 dirCss		= "css"
 
 fileCss[]	= "font-awesome.css"
 fileCss[]	= "bootstrap.min.css"
-fileCss[]	= "myCSS.css"
+fileCss[]	= "myCSSAdmin.css"
 
 dirJs		= "js"
 fileJs[]	= "jquery-3.2.1.min.js"
